2017-09-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define restoreAllClass function.
	Define genericListener.listeners.restoreAllClass function.
	Rename genericListener.listeners.restoreAllClass
	-> genericListener.listeners.resetStyle

2017-09-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Add event listener(window "unload").

	* tryXpath/background/try_xpath_background.js:
	Define popupState variable.
	Define genericListener.listeners.storePopupState function.
	Define genericListener.listeners.requestRestorePopupState function.

	* tryXpath/scripts/try_xpath_content.js:
	Change genericListener.listeners.execute function.
	sendMsg.main.resultType and sendMsg.context.resultType have been
	added.
	Fix genericListener.listeners.requestShowResultsInPopup function.

	* tryXpath/popup/popup.js:
	Define sendToActiveTab function.
	When the window is loaded "requestShowResultsInPopup" message is
	sent.

	* tryXpath/scripts/try_xpath_content.js: 
	Define genericListener.listeners.focusItem function.
	Define genericListener.listeners.requestShowResultsInPopup function.

2017-09-06  larissa9839  <larissa9839@gmail.com>

	* tryXpath/css/try_xpath_insert.css
	  Change color.

	* tryXpath/scripts/try_xpath_functions.js:
	Define isAttrItem function.
	Fix isNodeItem function. Now this function returns false when
	argument is Attr.
	Define getParentElement function.

	* tryXpath/scripts/try_xpath_content.js:
	Change genericListener.listeners.execute function to return
	itemDetails.

2017-09-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define getItemDetails function.

	* tryXpath/scripts/try_xpath_content.js:
	Define resetPrev function.
	Change genericListener.listeners.execute function.

	* tryXpath/scripts/try_xpath_functions.js:
	Change return value of execExpr function.
	Define addClassToItem function.
	Define addClassToItems function.
	Define isElementItem function.